# 3D-Wallpaper_engine

./: .env.example  .gitignore  README.md  requirements.txt
app/: run_wallpaper.py  run_wallpaper_haarcascade.py  run_wallpaper_mediapipe.py  send_mediapipe_tracking_udp.py
assets/cube/: Untitled.blend  simple-cube.blend
assets/screen_as_window/: off_axis_camera.py  off_axis_camera_keframegen.py  screen-as-window-sequenced-materials-testingpanellines-keframes-script.blend  screen-as-window-sequenced-materials-testingpanellines.blend  screen-as-window-sequenced-materials.blend  screen-as-window-sequenced.blend  screen-as-window.blend
cpp/: CMakeLists.txt
cpp/app/: main.cpp
cpp/include/: AppConfig.hpp  ExponentialSmoother2D.hpp  ImageSequence.hpp  IndexMapper.hpp  MediaPipeFaceTracker.hpp  SequenceCache.hpp  WallpaperWindow.hpp
cpp/src/: AppConfig.cpp  ExponentialSmoother2D.cpp  ImageSequence.cpp  IndexMapper.cpp  MediaPipeFaceTracker.cpp  SequenceCache.cpp  WallpaperWindow.cpp
docs/: ideas.md  project_journal.md  roadmap.md
docs/project_journal/: 2026-06-01-s2-first-working_prototype.md  2026-06-02-keframe-based-render-automation.md  journal_mediapipe_wallpaper.md  (+5 more)
prototypes/: desktop_hierarchy_diagnostic.py  prototype_01_face_tracked_wallpaper.py  wallpaper_desktop_prototype.py  workerw_visibility_test.py
src/: __init__.py  config.py  debug_view.py  face_tracker.py  indexing.py  renderer.py  sequence_cache.py  smoothing.py  tracking_worker.py
tests/: face_track_test.py  mediapipe_face_landmarker_test.py  mediapipe_sequence_index_test.py  window_size.py
(+13 files in other folders)
